--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+######################################
+### For all curious; <ô>_<ô>       ###
+### I coded that with a macbook    ###
+### With:                          ###
+### python -m venv                 ###
+### and:                           ###
+### . bin/activate                 ###
+### Greetz                         ###
+######################################
+#------------------------------------#
+  #--azertyuiop------------------------#
+    #--qsdfghjklm -----------------------#
+      #--wxcvbn----------------------------#
+      
 *.DS_Store
 bin
 include
